make sure footer isn't covering anything

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
   text-align: center;
-  min-height: 100%;
   position: relative;
+  overflow: visible;
 }
